# soundpool

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  main_extended.dart  main_simple.dart
ios/: soundpool.podspec
ios/Classes/: SoundpoolPlugin.h  SwiftSoundpoolPlugin.swift
lib/: soundpool.dart  soundpool_web.dart
soundpool/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
soundpool/android/: build.gradle  settings.gradle
soundpool/example/: pubspec.yaml
soundpool/lib/: soundpool.dart  soundpool_web.dart
soundpool/macos/: soundpool.podspec
soundpool_macos/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
soundpool_macos/android/: build.gradle  settings.gradle
soundpool_macos/ios/: soundpool_macos.podspec
soundpool_macos/macos/: soundpool_macos.podspec
soundpool_platform_interface/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
soundpool_platform_interface/lib/: method_channel_soundpool_platform.dart  soundpool_platform_interface.dart
soundpool_web/: .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
soundpool_web/android/: .project  build.gradle  settings.gradle
soundpool_web/ios/: soundpool_web.podspec
soundpool_web/lib/: soundpool_web.dart
soundpool_web/macos/: soundpool_web.podspec
soundpool_windux/: .gitignore  Cargo.toml  README.md  pubspec.yaml
soundpool_windux/example/: pubspec.yaml
soundpool_windux/lib/: generated_bindings.dart  soundpool_windux.dart
soundpool_windux/linux/: CMakeLists.txt  soundpool_windux_plugin.cc
soundpool_windux/linux/include/soundpool_windux/: soundpool_windux_plugin.h
soundpool_windux/macos/: soundpool_windux.podspec
soundpool_windux/rust/: .gitignore  Cargo.toml  _build.rs  build.rs
soundpool_windux/rust/src/: lib.rs  main.rs  soundpool.rs
soundpool_windux/rust/src/soundpool/: message.rs
soundpool_windux/windows/: CMakeLists.txt  shortcut_resolver.cmake  soundpool_windux_plugin.cpp
(+58 files in other folders)
