[package]
name = "soundpool"
version = "0.1.1"
authors = ["Łukasz Huculak <ukasz.apps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "soundpool"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "soundpool_runner"
path = "src/main.rs"

[dependencies]
rodio = "0.17"
rustyline = "*"

[build-dependencies]
cbindgen = "0.26.0"
